--- a/style.css
+++ b/style.css
@@ -11,17 +11,7 @@ body {
   justify-content: space-around;
   margin: 50px;
 }
-
-.container__0 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-}
+/*PRODUCTS 1,2,3,4,5,6*/
 .product1 {
   margin: 0;
   padding: 0;
@@ -58,7 +48,17 @@ body {
   width: 350px;
   height: 300px;
 }
-
+/*CONTAINER OF PHOTO*/
+.container__0 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 400px;
+  border: 1px solid black;
+  border-radius: 5%;
+  background-color: white;
+}
 .container__2 {
   margin: 0;
   padding: 0;
@@ -115,6 +115,8 @@ body {
   border-radius: 5%;
   background-color: white;
 }
+
+/*SLIDER FOOTER*/
 .slider {
   display: flex;
   align-items: center;
