--- a/style.css
+++ b/style.css
@@ -3,14 +3,11 @@ body {
 }
 .container__price__0 {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
-  margin: 50px;
+  align-content: space-around;
 }
-.container__price__1 {
-  display: flex;
-  justify-content: space-around;
-  margin: 50px;
-}
+
 /*PRODUCTS 1,2,3,4,5,6*/
 .product1 {
   margin: 0;
@@ -51,21 +48,14 @@ body {
 /*CONTAINER OF PHOTO*/
 .container__0 {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 400px;
   height: 400px;
   border: 1px solid black;
   border-radius: 5%;
   background-color: white;
 }
-.container__2 {
-  margin: 0;
-  padding: 0;
-  width: 350px;
-  height: 300px;
-}
-.container__1 {
+.container__products {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -74,48 +64,8 @@ body {
   border: 1px solid black;
   border-radius: 5%;
   background-color: white;
+  margin: 25px;
 }
-.container__2 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-}
-.container__3 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-}
-.container__4 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-}
-.container__5 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-}
-
 /*SLIDER FOOTER*/
 .slider {
   display: flex;
@@ -126,5 +76,6 @@ body {
   border: 1px solid black;
   margin-left: 25px;
   margin-right: 25px;
+  margin-bottom: 25px;
   background-color: white;
 }
