--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body {
-  background: url(./background.png);
-}
 .container__price__0 {
   display: flex;
   flex-wrap: wrap;
@@ -12,45 +9,45 @@ body {
 .product1 {
   margin: 0;
   padding: 0;
-  width: 350px;
-  height: 300px;
+  max-width: 350px;
+  max-height: 300px;
 }
 .product2 {
   margin: 0;
   padding: 0;
-  width: 350px;
-  height: 300px;
+  max-width: 350px;
+  max-height: 300px;
 }
 .product3 {
   margin: 0;
   padding: 0;
-  width: 350px;
-  height: 300px;
+  max-width: 350px;
+  max-height: 300px;
 }
 .product4 {
   margin: 0;
   padding: 0;
-  width: 320px;
-  height: 350px;
+  max-width: 320px;
+  max-height: 350px;
 }
 .product5 {
   margin: 0;
   padding: 0;
-  width: 350px;
-  height: 300px;
+  max-width: 350px;
+  max-height: 300px;
 }
 .product6 {
   margin: 0;
   padding: 0;
-  width: 300px;
-  height: 300px;
+  max-width: 300px;
+  max-height: 300px;
 }
 /*CONTAINER OF PHOTO*/
 .container__0 {
   display: flex;
   justify-content: space-around;
-  width: 400px;
-  height: 400px;
+  max-width: 400px;
+  max-height: 400px;
   border: 1px solid black;
   border-radius: 5%;
   background-color: white;
@@ -59,8 +56,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 400px;
-  height: 400px;
+  max-width: 400px;
+  max-height: 400px;
   border: 1px solid black;
   border-radius: 5%;
   background-color: white;
