--- a/style.css
+++ b/style.css
@@ -1,78 +1,71 @@
+body {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    25deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(233, 60, 60, 1) 27%,
+    rgba(0, 212, 255, 1) 100%
+  );
+}
 .container__price__0 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-content: space-around;
 }
+.container__price__1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+}
 
-/*PRODUCTS 1,2,3,4,5,6*/
+/*PRODUCTS IMG 1,2,3,4,5,6*/
 .product1 {
   margin: 0;
   padding: 0;
-  max-width: 350px;
-  max-height: 300px;
+  width: 350px;
+  height: 300px;
 }
 .product2 {
   margin: 0;
   padding: 0;
-  max-width: 350px;
-  max-height: 300px;
+  width: 350px;
+  height: 300px;
 }
 .product3 {
   margin: 0;
   padding: 0;
-  max-width: 350px;
-  max-height: 300px;
+  width: 350px;
+  height: 300px;
 }
 .product4 {
   margin: 0;
   padding: 0;
-  max-width: 320px;
-  max-height: 350px;
+  width: 320px;
+  height: 350px;
 }
 .product5 {
   margin: 0;
   padding: 0;
-  max-width: 350px;
-  max-height: 300px;
+  width: 350px;
+  height: 300px;
 }
 .product6 {
   margin: 0;
   padding: 0;
-  max-width: 300px;
-  max-height: 300px;
+  width: 300px;
+  height: 300px;
 }
 /*CONTAINER OF PHOTO*/
-.container__0 {
-  display: flex;
-  justify-content: space-around;
-  max-width: 400px;
-  max-height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-}
 .container__products {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 400px;
-  max-height: 400px;
+  width: 400px;
+  height: 400px;
   border: 1px solid black;
   border-radius: 5%;
   background-color: white;
   margin: 25px;
-}
-/*SLIDER FOOTER*/
-.slider {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  height: 100px;
-  border: 1px solid black;
-  margin-left: 25px;
-  margin-right: 25px;
-  margin-bottom: 25px;
-  background-color: white;
 }
