--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-content: space-around;
-  background: rgb(2, 0, 36);
+
   background: linear-gradient(
     90deg,
     rgba(2, 0, 36, 1) 0%,
@@ -72,11 +72,13 @@
   border-radius: 5%;
   background-color: white;
   margin: 25px;
+  /*spin animation*/
   animation-name: spin;
   animation: spin 2s linear infinite;
-
   animation-delay: 2.1s;
+  backface-visibility: hidden;
 }
+
 @keyframes spin {
   from {
     transform: rotateY(0deg);
@@ -139,4 +141,78 @@
   border-radius: 5%;
   background-color: white;
   margin: 25px;
+}
+
+/**************************************************************/
+/* set up the container and flipper styles */
+.flip-container {
+  perspective: 1000px;
+  width: 200px;
+  height: 200px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.flipper {
+  position: absolute;
+  transition: transform 3s ease-in-out;
+  transform-style: preserve-3d;
+  width: 100%;
+  height: 100%;
+}
+
+/* set up the front and back styles */
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* hide backface of the front and back elements */
+  backface-visibility: hidden;
+}
+
+.front {
+  background-color: #fff;
+}
+
+.back {
+  background-color: #ccc;
+  transform: rotateX(
+    180deg
+  ); /* rotate the back side 180 degrees on the X-axis */
+}
+
+/* set up the image styles */
+.front img,
+.back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* set up the animation */
+.flip-container:hover .flipper,
+.flip-container.flip .flipper {
+  transform: rotateX(180deg);
+}
+
+.flip-container.flip .back {
+  z-index: 1;
+}
+
+.flipper {
+  transform: rotateX(0deg);
+  animation: spin 13s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateX(0deg);
+  }
+  33.33% {
+    transform: rotateX(180deg);
+  }
+  100% {
+    transform: rotateX(360deg);
+  }
 }
