--- a/style.css
+++ b/style.css
@@ -1,218 +1,51 @@
-.container__price__0 {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container__details {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: space-around;
-
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(233, 60, 60, 1) 27%,
-    rgba(0, 212, 255, 1) 100%
-  );
 }
-.container__price__1 {
+.container__img-slider {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: space-around;
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(233, 60, 60, 1) 27%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  position: relative;
+  width: 100vw;
+  height: 400px;
 }
-
-/*PRODUCTS IMG 1,2,3,4,5,6*/
-.product1 {
-  margin: 0;
-  padding: 0;
-  width: 350px;
-  height: 300px;
+.container__img-slider .container__slider-container {
+  position: absolute;
+  width: 300%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  animation: slider 56s infinite;
 }
-.product2 {
-  margin: 0;
-  padding: 0;
-  width: 350px;
-  height: 300px;
+.container__img-slider .container__slider-container .slide {
+  position: relative;
+  width: 33.33333333%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
 }
-.product3 {
-  margin: 0;
-  padding: 0;
-  width: 350px;
-  height: 300px;
-}
-.product4 {
-  margin: 0;
-  padding: 0;
-  width: 320px;
-  height: 350px;
-}
-.product5 {
-  margin: 0;
-  padding: 0;
-  width: 350px;
-  height: 300px;
-}
-.product6 {
-  margin: 0;
-  padding: 0;
+.container__img-slider .container__slider-container .slide img {
+  display: block;
   width: 300px;
   height: 300px;
 }
-/*CONTAINER OF PHOTO*/
-.container__product__1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-  margin: 25px;
-  /*spin animation*/
-  animation-name: spin;
-  animation: spin 2s linear infinite;
-  animation-delay: 2.1s;
-  backface-visibility: hidden;
-}
-
-@keyframes spin {
-  from {
-    transform: rotateY(0deg);
-  }
-  to {
-    transform: rotateY(150deg);
-  }
-}
-.container__product__2 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-  margin: 25px;
-}
-.container__product__3 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-  margin: 25px;
-}
-.container__product__4 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-  margin: 25px;
-}
-.container__product__5 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-  margin: 25px;
-}
-.container__product__6 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 5%;
-  background-color: white;
-  margin: 25px;
-}
-
-/**************************************************************/
-/* set up the container and flipper styles */
-.flip-container {
-  perspective: 1000px;
-  width: 200px;
-  height: 200px;
-  position: relative;
-  margin: 0 auto;
-}
-
-.flipper {
-  position: absolute;
-  transition: transform 3s ease-in-out;
-  transform-style: preserve-3d;
-  width: 100%;
-  height: 100%;
-}
-
-/* set up the front and back styles */
-.front,
-.back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* hide backface of the front and back elements */
-  backface-visibility: hidden;
-}
-
-.front {
-  background-color: #fff;
-}
-
-.back {
-  background-color: #ccc;
-  transform: rotateX(
-    180deg
-  ); /* rotate the back side 180 degrees on the X-axis */
-}
-
-/* set up the image styles */
-.front img,
-.back img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-/* set up the animation */
-.flip-container:hover .flipper,
-.flip-container.flip .flipper {
-  transform: rotateX(180deg);
-}
-
-.flip-container.flip .back {
-  z-index: 1;
-}
-
-.flipper {
-  transform: rotateX(0deg);
-  animation: spin 13s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotateX(0deg);
-  }
-  33.33% {
-    transform: rotateX(180deg);
-  }
+@keyframes slider {
+  0%,
+  25%,
   100% {
-    transform: rotateX(360deg);
+    left: 0;
+  }
+
+  30%,
+  55% {
+    left: -100%;
+  }
+
+  60%,
+  85% {
+    left: -200%;
   }
 }
