--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 .container__details {
   display: flex;
 }
+.container__row_1 {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
 .container__img-slider {
   display: flex;
   position: relative;
