--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@
   left: 0;
   overflow: hidden;
   animation: slider 56s infinite;
+  -webkit-animation-timing-function: ease-in-out; /* Chrome, Safari, Opera */
+  animation-timing-function: ease-in-out;
 }
 .container__img-slider .container__slider-container .slide {
   position: relative;
@@ -52,12 +54,19 @@
 }
 @keyframes slider {
   0%,
+  5%,
+  10%,
+  15%,
+  20%,
   25%,
   100% {
     left: 0;
   }
 
   30%,
+  35%,
+  40%,
+  50%,
   55% {
     left: -100%;
   }
@@ -66,4 +75,11 @@
   85% {
     left: -200%;
   }
+}
+
+/*footer*/
+.footer {
+  width: 100%;
+  height: 100vh;
+  background-color: grey;
 }
