--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
   animation: slider 56s infinite;
   -webkit-animation-timing-function: ease-in-out; /* Chrome, Safari, Opera */
   animation-timing-function: ease-in-out;
+  transition: transform 1s ease-in 0s;
 }
 .container__img-slider .container__slider-container .slide {
   position: relative;
@@ -77,9 +78,19 @@
   }
 }
 
-/*footer*/
+/*footer background*/
 .footer {
   width: 100%;
   height: 100vh;
   background-color: grey;
+}
+.cube__corner__footer {
+  width: 150px;
+  height: 150px;
+  border: 1px solid red;
+}
+/*footer text*/
+.footer__text {
+  color: aliceblue;
+  font-size: 25px;
 }
