--- a/style.css
+++ b/style.css
@@ -118,3 +118,9 @@
   color: aliceblue;
   font-size: 40px;
 }
+/*qr code*/
+.qr__scan__code {
+  border: 1px solid red;
+  width: 300px;
+  height: 300px;
+}
