--- a/style.css
+++ b/style.css
@@ -84,43 +84,13 @@
   height: 100vh;
   background-color: grey;
 }
-.cube__corner__footer {
-  width: 150px;
-  height: 150px;
-  border: 1px solid red;
+.footer__qr {
+  width: 250px;
+  height: 250px;
 }
-/*footer text*/
-.footer__text__header {
-  color: aliceblue;
-  font-size: 50px;
-}
-.footer__text__adress {
-  color: aliceblue;
-  font-size: 35px;
-}
-.footer__text__hello {
-  color: aliceblue;
-  font-size: 40px;
-}
-.container__text {
+.container__footer {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-}
-.footer__order {
-  color: aliceblue;
-  font-size: 40px;
-  background-color: red;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.footer__phone__number {
-  color: aliceblue;
-  font-size: 40px;
-}
-/*qr code*/
-.qr__scan__code {
-  border: 1px solid red;
-  width: 300px;
-  height: 300px;
+  background-color: lightgray;
 }
