--- a/style.css
+++ b/style.css
@@ -19,10 +19,17 @@
   display: flex;
   flex-direction: row;
 }
-.test___space {
+.container__price__space {
   width: 481px;
   height: 571px;
   background-color: lightgrey;
+}
+.price__sign {
+  display: flex;
+  width: 150px;
+  height: 100px;
+  border: 1px solid #ef4035;
+  background-color: aliceblue;
 }
 /*container with product and details of it*/
 .container__row {
