--- a/style.css
+++ b/style.css
@@ -105,15 +105,22 @@
   width: 250px;
   height: 250px;
   padding-right: 25px;
+  position: absolute;
 }
 .container__footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: lightgray;
-  padding: 10px;
   border: 1px solid black;
+  height: 400px;
+}
+.footer__img {
+  position: relativ;
+  width: 100vh;
+  height: 400px;
+  z-index: 0;
 }
 .footer__text {
   padding-left: 25px;
+  position: absolute;
 }
