--- a/style.css
+++ b/style.css
@@ -102,8 +102,8 @@
   background-color: grey;
 }
 .footer__qr {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
 }
 .container__footer {
   display: flex;
@@ -114,12 +114,13 @@
 }
 .footer__img {
   width: 100%;
-  height: 400px;
+  height: 350px;
 }
 .footer__text {
   color: red;
-  padding-left: 25px;
-  position: absolute;
+  position: relative;
+  margin: 0;
+  padding: 0;
 }
 
 .container__img__position {
