--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
 }
 .container__price__space {
   display: flex;
-  width: 481px;
-  height: 550px;
+  width: 450px;
+
   background-color: lightgrey;
   align-items: center;
   justify-content: center;
@@ -109,16 +109,17 @@
   display: flex;
   border: 1px solid black;
   height: 400px;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: row;
+  background-color: #ef4035;
 }
 .footer__img {
   width: 100%;
   height: 350px;
+  border: 1px solid black;
 }
 .footer__text {
-  color: red;
-  position: relative;
+  position: absolute;
   margin: 0;
   padding: 0;
 }
@@ -126,4 +127,5 @@
 .container__img__position {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
