--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 .container__price__space {
   display: flex;
   width: 450px;
-
   background-color: lightgrey;
   align-items: center;
   justify-content: center;
@@ -114,7 +113,7 @@
   background-color: #ef4035;
 }
 .footer__img {
-  width: 100%;
+  width: 100vh;
   height: 350px;
   border: 1px solid black;
 }
