--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-/*H2 style in the description about item*/
+/*H2 style in the description about item
 .about__item {
   text-align: center;
-}
+}*/
 /*ul style list*/
 .container__ul__style__list {
   display: flex;
@@ -14,7 +14,7 @@
   flex-direction: column;
   justify-content: center;
 }
-/*description of product*/
+/*description of product*
 .container__details {
   display: flex;
   flex-direction: row;
@@ -33,8 +33,8 @@
   border: 1px solid #ef4035;
   border-radius: 10px;
   background-color: aliceblue;
-}
-/*container with product and details of it*/
+}/
+/*container with product and details of it
 .container__row {
   display: flex;
   justify-content: center;
@@ -53,7 +53,7 @@
   left: 0;
   overflow: hidden;
   animation: slider 56s infinite;
-  -webkit-animation-timing-function: ease-in-out; /* Chrome, Safari, Opera */
+  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
   transition: transform 1s ease-in 0s;
 }
@@ -93,7 +93,7 @@
     left: -200%;
   }
 }
-
+*/
 /*footer background*/
 .footer {
   width: 100%;
@@ -126,5 +126,19 @@
 .container__img__position {
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.container__slidse {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+.container__slidse {
+  height: 500px;
+  width: 100%;
+}
+.container__product__description {
+  display: flex;
   align-items: center;
 }
