--- a/style.css
+++ b/style.css
@@ -112,8 +112,8 @@
   background-color: #ef4035;
 }
 .footer__img {
-  width: 100%;
-  height: 100%;
+  width: 700px;
+  height: 400px;
   border: 1px solid black;
 }
 .footer__text {
@@ -129,13 +129,12 @@
 
 .container__slidse {
   display: flex;
-  justify-content: center;
+
   flex-direction: row;
-}
-.container__slidse {
   height: 500px;
   width: 100%;
 }
+
 .container__product__description {
   display: flex;
   align-items: center;
@@ -143,8 +142,19 @@
 }
 .ctr__web__qr {
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
 }
 .slider {
   background-color: lightgray;
+}
+.price {
+  position: absolute;
+  border: 2px solid #ef4035;
+  border-radius: 15px;
+  width: auto;
+  height: auto;
+  text-align: center;
+  font-size: 50px;
+  margin: auto;
+  z-index: 1;
 }
