--- a/style.css
+++ b/style.css
@@ -3,98 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
-/*H2 style in the description about item
-.about__item {
-  text-align: center;
-}*/
-/*ul style list*/
+
 .container__ul__style__list {
   display: flex;
   font-size: 25px;
   flex-direction: column;
   justify-content: center;
 }
-/*description of product*
-.container__details {
-  display: flex;
-  flex-direction: row;
-}
-.container__price__space {
-  display: flex;
-  width: 450px;
-  background-color: lightgrey;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #ef4035;
-}
-.price__sign {
-  width: 150px;
-  height: 100px;
-  border: 1px solid #ef4035;
-  border-radius: 10px;
-  background-color: aliceblue;
-}/
-/*container with product and details of it
-.container__row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.container__img-slider {
-  display: flex;
-  position: relative;
-  width: 100vw;
-  height: 550px;
-}
-.container__img-slider .container__slider-container {
-  position: absolute;
-  width: 300%;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  animation: slider 56s infinite;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  transition: transform 1s ease-in 0s;
-}
-.container__img-slider .container__slider-container .slide {
-  position: relative;
-  width: 33.33333333%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-}
-.container__img-slider .container__slider-container .slide img {
-  display: block;
-  width: 300px;
-  height: 300px;
-}
-@keyframes slider {
-  0%,
-  5%,
-  10%,
-  15%,
-  20%,
-  25%,
-  100% {
-    left: 0;
-  }
 
-  30%,
-  35%,
-  40%,
-  50%,
-  55% {
-    left: -100%;
-  }
-
-  60%,
-  85% {
-    left: -200%;
-  }
-}
-*/
-/*footer background*/
 .footer {
   width: 100%;
   height: 100vh;
@@ -157,4 +73,5 @@
   font-size: 50px;
   margin: auto;
   z-index: 1;
+  background-color: white;
 }
