--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@
   color: white;
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
-  width: auto;
-  height: auto;
+  width: 240px;
+  height: 160px;
   font-size: 100px;
   z-index: 1;
   background-color: #040446;
