--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
 }
 .slider__body {
-  height: 525px;
+  height: 528px;
+  display: flex;
+  align-items: center;
+}
+.slider {
 }
 .footer {
   width: 100%;
@@ -45,7 +49,7 @@
 
 .product__description {
   font-size: 100px;
-  margin: auto;
+
   color: #040446;
   text-align: center;
 }
@@ -67,6 +71,4 @@
 
 /*BACKGORUNDS IMGs*/
 .img__in__slider {
-  width: 520px;
-  height: 520px;
 }
