--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@
 }
 
 .container__slidse {
+  padding-left: 25px;
   display: flex;
   align-items: center;
 }
@@ -58,6 +59,7 @@
 }
 
 .price {
+  text-align: center;
   color: white;
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
@@ -66,4 +68,7 @@
   font-size: 100px;
   z-index: 1;
   background-color: #040446;
+}
+.presentation {
+  font-size: 25px;
 }
