--- a/style.css
+++ b/style.css
@@ -3,38 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.img__in__slider {
+  background: transparent;
+}
 .slider__body {
   height: 528px;
   display: flex;
   align-items: center;
 }
-/*
-.footer {
-  width: 100%;
-  height: 100vh;
-  background-color: grey;
-}*/
-/*
-.footer__qr {
-  width: 200px;
-  height: 200px;
-}*/
-/*.container__footer {
-  display: flex;
-  border: 1px solid black;
-  height: 400px;
-
-  background-color: #ef4035;
-}
-.footer__img {
-  width: 700px;
-  height: 400px;
-  border: 1px solid black;
-}
-.footer__text {
-  margin: 0;
-  padding: 0;
-}*/
 
 .container__img__position {
   display: flex;
@@ -69,9 +46,6 @@
   font-size: 100px;
   z-index: 1;
   background-color: #040446;
-}
-.presentation {
-  font-size: 25px;
 }
 
 /*footer*/
