--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 .img__in__slider {
-  background: transparent;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 .slider__body {
   height: 528px;
