--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 .img__in__slider {
-  padding-left: 25px;
-  padding-right: 25px;
+  text-align: center;
+  width: 550px;
   /*animation*/
   position: relative;
   animation-name: img-slider;
@@ -38,6 +38,7 @@
 }
 
 .slider__body {
+  font-family: sans-serif;
   height: 620px;
   display: flex;
   align-items: center;
@@ -51,13 +52,25 @@
 }
 
 .container__slidse {
-  padding-left: 25px;
+  padding-left: 15px;
   display: flex;
   align-items: center;
 }
-
+/*trailer_valet img sizing*/
+.trailer_valet {
+  width: 600px;
+  height: 700px;
+}
+.valet_desctiption {
+  background-color: #ffcb05;
+  margin: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 25px;
+}
 .product__description {
-  font-size: 100px;
+  padding-right: 15px;
+  font-size: 85px;
   color: #040446;
   text-align: center;
   /*animation*/
@@ -98,7 +111,7 @@
   color: white;
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
-  width: 240px;
+  width: auto;
   height: 160px;
   font-size: 100px;
   z-index: 1;
