--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
 
 .slider__body {
   font-family: sans-serif;
-  height: 620px;
+  height: auto;
   display: flex;
   align-items: center;
   overflow: hidden;
