--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+.tv-logo {
+  height: 75px;
+  width: 75px;
+}
 .img__in__slider {
   text-align: center;
   width: 550px;
