--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@
 }
 /*trailer_valet img sizing*/
 .trailer_valet {
+  border-radius: 25px;
   width: 600px;
   height: 700px;
 }
@@ -69,6 +70,7 @@
   background-color: #ffcb05;
   margin: auto;
   border-radius: 25px;
+  padding: 15px;
 }
 .product__description {
   font-size: 75px;
