--- a/style.css
+++ b/style.css
@@ -55,11 +55,8 @@
 }
 
 .container__slidse {
-  padding-right: 15px;
-  padding-left: 15px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
 }
 /*trailer_valet img sizing*/
 .trailer_valet {
@@ -69,14 +66,21 @@
 }
 .valet_desctiption {
   background-color: #ffcb05;
-  margin: auto;
   border-radius: 25px;
-  padding: 15px;
+  text-align: center;
+  margin-left: 200px;
+  margin-right: 200px;
 }
+
 .product__description {
-  font-size: 75px;
   color: #040446;
   text-align: center;
+  font-size: 50px;
+  margin: auto;
+}
+.container__product__description {
+  font-size: 65px;
+
   /*animation*/
   position: relative;
   animation-name: product-description;
@@ -103,6 +107,12 @@
     right: 0%;
     opacity: 1;
   }
+}
+.product__description__position {
+  width: auto;
+  height: auto;
+  display: flex;
+  text-align: center;
 }
 
 .qr {
