--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 }
 
 .slider__body {
-  font-family: sans-serif;
+  font-family: fantasy;
   height: 750px;
   display: flex;
   align-items: center;
