--- a/style.css
+++ b/style.css
@@ -146,6 +146,9 @@
   margin-top: 340px;
 }
 .price_div {
+  padding-left: 5px;
+  padding-right: 5px;
+  border: #040446 solid 1px;
   color: white;
   border-radius: 50px;
   width: auto;
