--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+body {
+  background: #000;
+}
 .tv-logo {
   height: 75px;
   width: 75px;
@@ -19,7 +21,32 @@
   width: 100%;
   height: 100%;
 }
-
+/* BBQ__CTR */
+.bbq__ctr {
+  width: auto;
+  height: 100vh;
+}
+.container__product__description__grill {
+  height: 100vh;
+  padding-top: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background: black;
+  text-align: center;
+  font-size: 200px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+span {
+  text-align: center;
+  display: block;
+  background: url("./img_products/bbq__ctr/fire-burn.gif");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: fire 0.2s linear infinite;
+}
 /*TBQ LOGO*/
 .tbq_brand {
   text-align: center;
@@ -40,7 +67,11 @@
     opacity: 1;
   }
 }
-
+.bbq__ctr__slide {
+  text-align: center;
+  width: auto;
+  position: relative;
+}
 /*img in slider*/
 .img__in__slider {
   padding-left: 20px;
@@ -83,17 +114,7 @@
   overflow: hidden;
   position: relative;
 }
-/* .slider__body::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: url(./img_products/background/wallpaper_background.jpg);
-  opacity: 1;
-}
- */
+
 .container__img__position {
   display: flex;
   flex-direction: row;
@@ -119,10 +140,6 @@
 }
 
 .product__description {
-  /* text-shadow: 0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446,
-    0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446,
-    0 0 5px #040446; */
-
   color: black;
   text-align: center;
   font-size: 65px;
@@ -172,9 +189,6 @@
 }
 
 .price {
-  /*  text-shadow: 0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446,
-    0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446,
-    0 0 5px #040446; */
   margin: 0;
   margin: -200px;
   margin-top: 340px;
@@ -260,8 +274,5 @@
   font-size: 45px;
 }
 .footer_logo {
-  /* text-shadow: 0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446,
-    0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446, 0 0 5px #040446,
-    0 0 5px #040446; */
   width: 60%;
 }
