--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   height: 75px;
   width: 75px;
 }
+
 /*TBQ BRAND*/
 .container-tbq {
   display: flex;
@@ -243,6 +244,7 @@ body {
 
 /*rotate*/
 .for_rotate {
+  padding-left: 25px;
   transform: rotate(30deg);
 }
 
