--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
 }
 
 .noco__img {
+  padding-left: 25px;
   width: auto;
   height: 500px;
 }
@@ -83,7 +84,7 @@ body {
 }
 /*img in slider*/
 .img__in__slider {
-  padding-left: 20px;
+  padding-left: 25px;
   text-align: center;
   width: auto;
   position: relative;
@@ -242,7 +243,10 @@ body {
   }
 }
 
-/*rotate*/
+/*rotate or add space*/
+.space {
+  padding-left: 25px;
+}
 .for_rotate {
   padding-left: 25px;
   transform: rotate(30deg);
